--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,30 @@ body{
     text-align: center;
     font-family: "Courier New";
 }
+
+#cabecera{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px;
+    color: white;
+    font-weight: bold;
+    margin: 0px;
+    padding: 0.5em;
+}
+
+#cabecera #tagline{
+    padding: 0 0 0 1em;
+    font-weight: bold;
+    font-size: 0.8em;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1{
+    font-size: 20;
+}
