--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@ body{
     color: deeppink;
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 #cabecera{
