--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body{
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: "Arial";
@@ -8,17 +9,23 @@ body{
 }
 
 #cabecera{
-    background: #33A;
-    box-shadow: 0px 2px 20px 0px;
+    background: #54608f;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
-    margin: 0px;
-    padding: 0.5em;
+    margin: 0;
+    padding: 0.5em 0 0  0.2em;
+}
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+
 }
 
 #cabecera #tagline{
     padding: 0 0 0 1em;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 0.8em;
 }
 
@@ -32,4 +39,9 @@ body{
 
 #container h1{
     font-size: 20;
+}
+
+#post {
+    background: white;
+    padding: 1em;
 }
