--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body{
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
-    padding: 0 0 0 1em;
+    padding: 0;
 }
 
 #container h1{
