--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body{
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em 0 0  0.2em;
+    padding: 0.5em 0 0.5em  0.2em;
 }
 
 #cabecera #tagline{
